Closed
Bug 934610
Opened 12 years ago
Closed 12 years ago
HTTP cache v2: fix Assertion failure: !EventsPending(), at CacheIOThread.cpp:172
Categories
(Core :: Networking: Cache, defect)
Tracking
()
RESOLVED
FIXED
mozilla28
People
(Reporter: mayhemer, Assigned: mayhemer)
References
Details
Attachments
(1 file)
|
715 bytes,
patch
|
michal
:
review+
mayhemer
:
checkin+
|
Details | Diff | Splinter Review |
In the |do { } while (cond);| statement |continue;| makes the cond be checked, it doesn't just restart the loop. New stuff learned about C++ today :D
Michal please just formally review, applies only to cache2 enabled.
Attachment #826930 -
Flags: review?(michal.novotny)
Updated•12 years ago
|
Attachment #826930 -
Flags: review?(michal.novotny) → review+
| Assignee | ||
Comment 1•12 years ago
|
||
Comment on attachment 826930 [details] [diff] [review]
v1
https://hg.mozilla.org/integration/mozilla-inbound/rev/3591be353786
https://tbpl.mozilla.org/?tree=Try&rev=69d73cf7f79a
Attachment #826930 -
Flags: checkin+
Comment 2•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
You need to log in
before you can comment on or make changes to this bug.
Description
•