Bug 934610 - fix Assertion failure: \!EventsPending(), at CacheIOThread.cpp:172, r=michal